@@ -63,6 +63,7 @@ HAGOOGAMAGOOGLE: 0
 0x80000000 -> ff fd
 π
 π
+LE: π
 ---- utf8_to_ascii
 ¿Does π have fingers?
 ?Does ? have fingers?
