@@ -1,0 +1,8 @@
+potato.png -> 6,0
+  preferred name: π.png
+  all names:
+    /F -> π.png
+    /UF -> π.png
+  all data streams:
+    /F -> 6,0
+    /UF -> 6,0
